--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>demo-api - 1.0.0-SNAPSHOT</title>
+        <title>demo-api - 1.0.0</title>
         <style>
             body {
                 margin: 0;
@@ -237,8 +237,8 @@
                             <ul>
                                 <li>GroupId: <code>com.upaio</code></li>
                                 <li>ArtifactId: <code>demo-api</code></li>
-                                <li>Version: <code>1.0.0-SNAPSHOT</code></li>
-                                <li>Quarkus Version: <code>2.13.3.Final</code></li>
+                                <li>Version: <code>1.0.0</code></li>
+                                <li>Quarkus Version: <code>3.4.3</code></li>
                             </ul>
                         </div>
                     </div>
